--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.0",
+    "react-toastify": "^9.1.1",
     "sass-loader": "^13.2.0",
     "scss-loader": "^0.0.1",
     "web-vitals": "^2.1.4"
