--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -22,7 +25,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.0.0",
     "react-icon": "^1.0.0",
-    "react-icons": "^4.6.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.0",
