--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "google-scholar": "^1.5.1",
+    "hamburger-react": "^2.5.0",
     "i18n": "^0.15.1",
     "i18next": "^22.0.2",
     "i18next-browser-languagedetector": "^6.1.8",
