--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^2.5.0",
     "react-countup": "^6.3.2",
     "react-dom": "^18.2.0",
+    "react-editext": "^5.1.0",
     "react-i18next": "^12.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
