--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
     "google-scholar": "^1.5.1",
     "hamburger-react": "^2.5.0",
