--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "react-i18next": "^12.0.0",
     "react-icon": "^1.0.0",
     "react-icons": "^4.7.1",
+    "react-list-input": "^1.1.0",
     "react-multi-date-picker": "^3.3.4",
     "react-router": "^6.6.1",
-    "react-router-dom": "^6.4.2",
+    "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-scroll-motion": "^0.3.0",
     "sass-loader": "^13.2.0",
